--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-This file was created by IntelliJ IDEA (Community Edition) IC-122.746 for binding GitHub repository
+AEDis 1st project 2012/2013
+
+Implementation of Ukkonen's Suffix Tries
